# ITMO-Cpp-Course

./: README.md
FileWalker/: FileWalker.pro  filewalker.cpp  filewalker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Homework11/: Makefile  main.cpp
Homework11/BadFromStringException/: BadFromStringException.cpp  BadFromStringException.h
Homework2/: Person.cpp  Person.h  main.cpp
Homework3/: Makefile  bye.cpp  hello.cpp  here.cpp  main.cpp  mylib.h
Homework4/: CMakeLists.txt  projectBuild.sh
Homework4/srcs/: main.cpp
Homework4/srcs/Rational/lib_rational/: CMakeLists.txt  lib_rational.cpp  lib_rational.h
Homework4/srcs/Rational/rational_poly/: CMakeLists.txt  rational_poly.cpp  rational_poly.h
Homework4/srcs/tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
Homework5/: Makefile  PersonalString.cpp  PersonalString.h  main.cpp
Homework6/: Makefile  main.cpp
Homework6/Heap/: Heap.cpp  Heap.h
Homework7/: Makefile
Homework7/MyArray/: MyArray.h  MyArrayImpl.h
Homework7/MyType/: MyType.cpp  MyType.h
Homework8/: Makefile  main.cpp
Homework8/FirstTask/Animal/: Animal.cpp  Animal.h
Homework8/FirstTask/Bear/: Bear.cpp  Bear.h
Homework8/FirstTask/Man/: Man.cpp  Man.h
Homework8/FirstTask/ManBearPig/: ManBearPig.cpp  ManBearPig.h
Homework8/FirstTask/Pig/: Pig.cpp  Pig.h
Homework8/FirstTask/Unit/: Unit.cpp  Unit.h
Homework9/: Makefile  main.cpp
Homework9/SecondTask/: Array.h  ArrayTemplateImpl.h
